EncryApp complete implementation.